# Hybrid-GraphRAG-biopython

./: .gitignore  README.md  pyproject.toml
Neo4j/: docker-compose.override.example.yml  docker-compose.yml  readme.md
data/markdown/BioPython_granite3.2/: BioPython.md  BioPython_meta.json  readme.md
data/pkls/: docs_biopython.pkl  docs_graph_bgem3_biopython.pkl  docs_pages_semantic_split_biopython.pkl  docs_pages_semantic_split_nomic_biopython.pkl  docs_vmd_user_guid.pkl  docs_vmd_user_guid_2016.pkl
data/pkls/del/: docs_graph_bgem3_biopython.0417.140623.pkl  docs_graph_bgem3_biopython.0418.135600.last.pkl  docs_graph_bgem3_biopython.0418.170928.pkl  docs_graph_bgem3_biopython.0419.001936.last.pkl  docs_graph_bgem3_biopython.0419.002623.last.pkl  docs_graph_bgem3_biopython.0419.014410.last.pkl  docs_graph_bgem3_biopython.0419.014410.pkl  docs_graph_bgem3_biopython.pkl  docs_graph_bgem3_biopython.run.0419101246.last.pkl  docs_graph_bgem3_biopython.run.0423005417.last.pkl
dot-secrets/: dot-env-docker-neo4j.toml  dot-env-neo4j-auth  dot-env.toml  env_setup.py  readme.md
src/: convert_pdf_to_md.ipynb  convert_pdf_to_md.py  enhancing_rag_with_graph.ipynb  extract-graph-helper-script.py  main.ipynb
src/modules/: add_to_python_path.py  utils.py
src/modules/my_langchain_experimental/: graph_transformers.py  text_splitter.py
src/tutorials/: 5_Levels_Of_Text_Splitting.ipynb  enhancing_rag_with_graph.ipynb  llm_caching.ipynb  pdf_to_md_heavy.ipynb  pymupdf4llm.ipynb  semantic-chunker.ipynb
