[project]
name = "graphrag-neo4j-vmd-namd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "marker-pdf>=1.6.2",
    "notebook>=7.3.3",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.21",
]
