[project]
name = "graphrag-neo4j-vmd-namd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "langgraph>=0.3.27",
    "langsmith>=0.3.27",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-ollama>=0.3.1",
    "langchain-pymupdf4llm>=0.3.1",
    "neo4j>=5.28.1",
    "notebook>=7.3.3",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "yfiles-jupyter-graphs>=1.10.2",
    "langchain-neo4j>=0.4.0",
    "tqdm>=4.67.1",
]
